Move `CodableFeedStore` to its own file in production

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Feed.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Feed.xcscheme
@@ -103,6 +103,16 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FeedAPIEndToEndTests"
+               BuildableName = "FeedAPIEndToEndTests"
+               BlueprintName = "FeedAPIEndToEndTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
